--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <body>
 
   <header class="main-navigation">
+    <div id="firstDiv">
+      <button id="firstButton">Click Me</button>
+    </div>
+    
     <div class="container nav-container">
       <h1 class="logo-heading">Fun Bus</h1>
       <nav class="nav">
